@@ -11,6 +11,8 @@
 package org.junit.jupiter.engine.discovery.predicates;
 
 import static org.apiguardian.api.API.Status.INTERNAL;
+import static org.junit.jupiter.engine.support.MethodReflectionUtils.getGenericReturnType;
+import static org.junit.jupiter.engine.support.MethodReflectionUtils.getReturnType;
 import static org.junit.platform.commons.util.CollectionUtils.isConvertibleToStream;
 
 import java.lang.annotation.Annotation;
@@ -38,8 +40,7 @@ import org.junit.platform.engine.support.discovery.DiscoveryIssueReporter;
 @API(status = INTERNAL, since = "5.0")
 public class IsTestFactoryMethod extends IsTestableMethod {
 
-	private static final String EXPECTED_RETURN_TYPE_MESSAGE = String.format(
-		"must return a single %1$s or a Stream, Collection, Iterable, Iterator, Iterator provider, or array of %1$s",
+	private static final String EXPECTED_RETURN_TYPE_MESSAGE = "must return a single %1$s or a Stream, Collection, Iterable, Iterator, Iterator provider, or array of %1$s".formatted(
 		DynamicNode.class.getName());
 
 	public IsTestFactoryMethod(DiscoveryIssueReporter issueReporter) {
@@ -53,7 +54,7 @@ public class IsTestFactoryMethod extends IsTestableMethod {
 	}
 
 	private static boolean isCompatible(Method method, DiscoveryIssueReporter issueReporter) {
-		Class<?> returnType = method.getReturnType();
+		Class<?> returnType = getReturnType(method);
 		if (DynamicNode.class.isAssignableFrom(returnType) || DynamicNode[].class.isAssignableFrom(returnType)) {
 			return true;
 		}
@@ -66,22 +67,21 @@ public class IsTestFactoryMethod extends IsTestableMethod {
 	}
 
 	private static boolean isCompatibleContainerType(Method method, DiscoveryIssueReporter issueReporter) {
-		Type genericReturnType = method.getGenericReturnType();
+		Type genericReturnType = getGenericReturnType(method);
 
-		if (genericReturnType instanceof ParameterizedType) {
-			Type[] typeArguments = ((ParameterizedType) genericReturnType).getActualTypeArguments();
+		if (genericReturnType instanceof ParameterizedType type) {
+			Type[] typeArguments = type.getActualTypeArguments();
 			if (typeArguments.length == 1) {
 				Type typeArgument = typeArguments[0];
-				if (typeArgument instanceof Class) {
+				if (typeArgument instanceof Class<?> clazz) {
 					// Stream<DynamicNode> etc.
-					return DynamicNode.class.isAssignableFrom((Class<?>) typeArgument);
+					return DynamicNode.class.isAssignableFrom(clazz);
 				}
-				if (typeArgument instanceof WildcardType) {
-					WildcardType wildcardType = (WildcardType) typeArgument;
+				if (typeArgument instanceof WildcardType wildcardType) {
 					Type[] upperBounds = wildcardType.getUpperBounds();
 					Type[] lowerBounds = wildcardType.getLowerBounds();
-					if (upperBounds.length == 1 && lowerBounds.length == 0 && upperBounds[0] instanceof Class) {
-						Class<?> upperBound = (Class<?>) upperBounds[0];
+					if (upperBounds.length == 1 && lowerBounds.length == 0
+							&& upperBounds[0] instanceof Class<?> upperBound) {
 						if (Object.class.equals(upperBound)) { // Stream<?> etc.
 							issueReporter.reportIssue(createTooGenericReturnTypeIssue(method));
 							return true;
