@@ -235,11 +235,11 @@ public class EngineExecutionOrchestrator {
 		catch (Throwable throwable) {
 			UnrecoverableExceptions.rethrowIfUnrecoverable(throwable);
 			JUnitException cause = null;
-			if (throwable instanceof LinkageError) {
-				cause = ClasspathAlignmentChecker.check((LinkageError) throwable).orElse(null);
+			if (throwable instanceof LinkageError error) {
+				cause = ClasspathAlignmentChecker.check(error).orElse(null);
 			}
 			if (cause == null) {
-				String message = String.format("TestEngine with ID '%s' failed to execute tests", testEngine.getId());
+				String message = "TestEngine with ID '%s' failed to execute tests".formatted(testEngine.getId());
 				cause = new JUnitException(message, throwable);
 			}
 			delayingListener.reportEngineStartIfNecessary();
